# OpenGlCameraRender

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/example/cameraglrender/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: FaceTracker.cpp  FaceTracker.h  native-lib.cpp
app/src/main/cpp/alignment/: CMakeLists.txt
app/src/main/cpp/include/opencv2/dnn/: dnn.hpp
app/src/main/cpp/include/opencv2/flann/: hdf5.h
app/src/main/java/com/example/cameraglrender/: MainActivity.java
app/src/main/java/com/example/cameraglrender/face/: Face.java  FaceTracker.java
app/src/main/java/com/example/cameraglrender/filter/: AbstractFBOFilter.java  BaseFilter.java  BeautifyFilter.java  BigEyeFilter.java  CameraFilter.java  ScreenFilter.java  SoulFilter.java  StickerFilter.java
app/src/main/java/com/example/cameraglrender/record/: AvcDecoder.java  AvcRecorder.java  EglConfigBase.java
app/src/main/java/com/example/cameraglrender/util/: Camera2Helper.java  DecoderFinishListener.java  FileUtil.java  GLImage.java  OnDecoderPlayer.java  OnRecordListener.java  OpenGlUtils.java
app/src/main/java/com/example/cameraglrender/widget/: GlRenderView.java  GlRenderWrapper.java  RecordButton.java  SoulActivity.java  SoulView.java
app/src/main/res/drawable/: record_press_button_background.xml  record_speed_background.xml  record_speed_button_background.xml  record_speed_button_text.xml
app/src/main/res/layout/: activity_main.xml  activity_soul.xml
app/src/main/res/raw/: beauty_frag.frag  bigeye_frag.frag  camera_frag.frag  camera_vertex.vert  screen_frag.frag  screen_vert.vert  soul_frag.frag  soul_vertex.vert
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/cameraglrender/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
